-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
6.2.0
-
None
androiddeployqt seems to be forcing a release build always when creating a signed package, this seems to be based on some assumption which doesn't seem to be true, and git history doesn't seem to show good reasoning behind it.
It is possible to create both debug and release packages when signing on Android, so we shouldn't be enforcing this restriction on Qt app builds.
The fix on androiddeloyqt is fairly simple by removing the part setting
options.releasePackage = true;
when processing the --sign arguments. However, it seems that QtC is also not respecting/setting the --release argument when calling androidtestrunner under AndroidApkBuildStep which means both sides need to have fixes for those issues to ensure things don't break.
| For Gerrit Dashboard: QTBUG-103281 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 412045,2 | Android: Do not set release flag for signed package | dev | qt/qtbase | Status: MERGED | +2 | 0 |